# sim-evals

./: SETUP.md  pyproject.toml  run_eval.py
src/sim_evals/environments/: droid_environment.py  nvidia_droid.py
