[project]
name = "sim-evals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "pip>=25.0",
  "mediapy>=1.2.4",
  "openpi-client",
  "isaacsim[all,extscache]==6.0.0.0",
  "isaaclab",
  "isaaclab-tasks",
  "isaaclab-assets",
  "isaaclab-physx",
  "isaaclab-contrib",
  "isaaclab-visualizers",
  "h5py>=3.10.0",
  "hydra-core>=1.3.0",
  "tyro>=0.9.17",
  "websockets>=16.0",
]

[tool.uv]
override-dependencies = [
  "websockets>=16.0",
  "numpy>=2.0.0",
  "coverage>=7.4.4",
  "typing-extensions>=4.12.2",
  "starlette>=0.48.0",
  "fastapi>=0.115.0",
]
prerelease = "allow"
index-strategy = "unsafe-best-match"

[tool.uv.sources]
isaacsim = { index = "isaac" }
openpi-client = { git = "https://github.com/Physical-Intelligence/openpi.git", subdirectory = "packages/openpi-client" }
isaaclab = { path = "submodules/IsaacLab/source/isaaclab", editable = true }
isaaclab-tasks = { path = "submodules/IsaacLab/source/isaaclab_tasks", editable = true }
isaaclab-assets = { path = "submodules/IsaacLab/source/isaaclab_assets", editable = true }
isaaclab-physx = { path = "submodules/IsaacLab/source/isaaclab_physx", editable = true }
isaaclab-contrib = { path = "submodules/IsaacLab/source/isaaclab_contrib", editable = true }
isaaclab-visualizers = { path = "submodules/IsaacLab/source/isaaclab_visualizers", editable = true }
real2simeval = { workspace = true }

[[tool.uv.index]]
name = "isaac"
url = "https://pypi.nvidia.com"

[tool.basedpyright]
extraPaths = [
    "./submodules/IsaacLab/source/isaaclab",
    "./submodules/IsaacLab/source/isaaclab_assets",
    "./submodules/IsaacLab/source/isaaclab_tasks"
]
typeCheckingMode = "standard"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
